--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
   display: grid;
   place-content: center;
   text-align: center;
-  background: navy;
+  background: rgb(3, 178, 169);
 }
 
 #game-area {
   border-style: solid;
   border-width: 12px;
-  border-color: aqua;
+  border-color: rgb(43, 0, 255);
   background: blue;
 }
 
